# merch_loc_classification

./: .gitignore  .pre-commit-config.yaml  README  data_labeling.ipynb  data_preprocessing.ipynb  feature_experiment.py  merchant_locs_NER_labeling.ipynb  predict_NER_location.py  predict_oo_classification.py  preprocessing.ipynb  pyproject.toml  train.py  train_NER_location.py  train_untracked.py  vector_based_text_enhancement.ipynb  word2vec.ipynb
data/: city_dictionary.pkl  indo_cities_list.pkl  merchant_location_training.csv.dvc  merchant_locs_offline_online_data_example.txt  merchant_locs_offline_online_train.csv.dvc  merchant_locs_offline_online_validation.csv.dvc  merchant_locs_train.csv.dvc  merchant_locs_train_with_installment.csv.dvc  merchant_ner_labeled_all.parquet.dvc  merchant_ner_labeled_train.parquet.dvc  merchant_ner_labeled_validation.parquet.dvc  ngram_fuzzy_matcher_class.pkl  spacy_training_data_example.txt
model/indonesian_location_ner_model/: config.cfg  meta.json  tokenizer
model/indonesian_location_ner_model/ner/: cfg  model  moves
model/indonesian_location_ner_model/vocab/: strings.json  vectors.cfg
notebooks/: data_labeling.ipynb  preprocessing.ipynb
