[project]
name = "merch-loc-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "wnrezaldi"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.23.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "dvc (>=3.59.1,<4.0.0)",
    "mlflow (>=2.20.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
