[project]
name = "merch-loc-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "wnrezaldi"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "polars (>=1.23.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "dvc (>=3.59.1,<4.0.0)",
    "mlflow (>=2.20.2,<3.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "cupy-cuda12x (>=13.4.0,<14.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
